[package]
name = "melt-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jan Tore Bøe <jan@boee.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jantb/melt-rs.git"

[dependencies]
ascii_utils = "0.9.3"
dirs = "4.0"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
flate2 = "1.0.25"
rocksdb = {version=  "0.19.0" , default-features = false,features = ["zstd"]}
