[package]
name = "melt-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jan Tore Bøe <jan@boee.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jantb/melt-rs.git"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
rayon = "1.6.1"
bincode = "1.3.3"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "search"
harness = false
